Fix checkstyle failure in BaseSingleSegmentConversionExecutorTest